[tool.poetry]
name = "notion-habit"
version = "0.1.0"
description = ""
authors = ["lionel_lonkaptsamba <lktslionel@oui.sncf>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
